--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#top">Home</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Contact.html#form4-o">Contact</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Contact.html#form4-o">Contact</a></li>
+                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Form.html#form4-o">Google Form</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://github.com/baobaoack000" target="_blank">
                         <span class="p-2 mbr-iconfont mobi-mbri-github mobi-mbri"></span>
